--- a/client/glade/theme.css
+++ b/client/glade/theme.css
@@ -13,7 +13,6 @@ box text colour             bt               #ffffff
 /* window {
     background-color: rgb(70, 73, 73);
 } */
-
 list {
 	color: white;
 	background-color: #343434;
@@ -24,6 +23,19 @@ list {
 	  border-color: #282828; }
 	list row {
 	  padding: 2px; }
+
+.list_ch_cont list {
+	color: rgb(131, 128, 128);
+	background-color: #343434;
+	border-color: #222222;
+	box-shadow: 0 4px 5px -1px rgba(0, 0, 0, 0.5); }
+	list:backdrop {
+	  color: #d7d7d7;
+	  background-color: #373737;
+	  border-color: #282828; }
+	list row {
+	  padding: 2px; }
+
 
 row {
 	transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
@@ -48,5 +60,18 @@ row {
 
 	row:selected {
 		background-color: #202433;
-		box-shadow: inset 0 2px 3px -1px rgba(0, 0, 0, 0.5);
-	}
+		box-shadow: inset 0 2px 3px -1px rgba(0, 0, 0, 0.5); }
+
+.list_ch_cont  row:selected {
+		background-color: #202433;
+		box-shadow: inset -2px 2px 3px -1px rgba(0, 0, 0, 0.5); }
+
+entry {
+	font-family: "Helvetica Neue";
+	background-color: transparent;
+	font-size: 17px;
+	border-color: transparent; }
+
+entry:checked {
+	background-color: transparent;
+	border-color: transparent; }
