--- a/client/glade/theme.css
+++ b/client/glade/theme.css
@@ -10,9 +10,9 @@ box text colour             bt               #ffffff
 
 */
 
-/* window {
-    background-color: rgb(70, 73, 73);
-} */
+window {
+    background-color: #343434;
+}
 list {
 	color: white;
 	background-color: #343434;
@@ -27,8 +27,7 @@ list {
 .list_ch_cont list {
 	color: rgb(131, 128, 128);
 	background-color: #343434;
-	border-color: #222222;
-	box-shadow: 0 4px 5px -1px rgba(0, 0, 0, 0.5); }
+	border-color: #222222;}
 	list:backdrop {
 	  color: #d7d7d7;
 	  background-color: #373737;
