--- a/client/glade/theme.css
+++ b/client/glade/theme.css
@@ -74,3 +74,24 @@ entry {
 entry:checked {
 	background-color: transparent;
 	border-color: transparent; }
+
+.initials_lab {
+	font-family: "Helvetica Neue";
+	font-size: 28px;
+	color: #535150;
+}
+
+.username_lab {
+	font-family: "Helvetica Neue";
+	font-size: 22px;
+}
+
+row:hover.contact_row {
+	color: rgb(199, 199, 199);
+}
+
+.avatar_box {
+	background-color: rgba(255, 255, 255, 0.856);
+	box-shadow: inset 0px 0px 6px 1px rgba(146, 146, 146, 0.815);
+	border-radius: 25px;
+}
