--- a/client/glade/ch_window.glade
+++ b/client/glade/ch_window.glade
@@ -110,7 +110,6 @@
                         <property name="primary_icon_sensitive">False</property>
                         <property name="placeholder_text" translatable="yes">Search by username</property>
                         <signal name="activate" handler="on_find_user_field_activate" swapped="no"/>
-                        <signal name="changed" handler="on_find_user_field_change" swapped="no"/>
                       </object>
                       <packing>
                         <property name="x">13</property>
@@ -144,22 +143,28 @@
                               <object class="GtkLabel" id="search_result_label">
                                 <property name="name">search_result_label</property>
                                 <property name="can_focus">False</property>
-                                <property name="margin_bottom">5</property>
+                                <property name="visible">False</property>
+                                <property name="margin_bottom">0</property>
                                 <property name="label" translatable="yes">Search result:</property>
+                                  <attributes>
+                                    <attribute name="font-desc" value="Helvetica Neue 16"/>
+                                    <attribute name="foreground" value="#ffffffffffff"/>
+                                  </attributes>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
-                                <property name="fill">True</property>
+                                <property name="fill">False</property>
                                 <property name="position">0</property>
                               </packing>
                             </child>
                             <child>
                               <object class="GtkListBox" id="search_result_list_box">
-                                <property name="name">searc_result_list_box</property>
+                                <property name="name">search_result_list_box</property>
                                 <property name="width_request">-1</property>
                                 <property name="height_request">-1</property>
+                                <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="margin_bottom">5</property>
+                                <property name="margin_bottom">0</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
