--- a/client/glade/ch_window.glade
+++ b/client/glade/ch_window.glade
@@ -9,7 +9,7 @@
     <property name="window_position">center-always</property>
     <property name="default_width">-1</property>
     <property name="default_height">-1</property>
-    <property name="icon_name">user-idle</property>
+    <property name="icon_name">edit-find-symbolic</property>
     <property name="gravity">east</property>
     <child type="titlebar">
       <placeholder/>
@@ -83,7 +83,7 @@
             <property name="height_request">560</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="transition_duration">100</property>
+            <property name="transition_duration">80</property>
             <property name="transition_type">crossfade</property>
             <child>
               <object class="GtkFixed" id="contacts_list">
@@ -92,7 +92,7 @@
                 <child>
                   <object class="GtkFixed">
                     <property name="width_request">230</property>
-                    <property name="height_request">55</property>
+                    <property name="height_request">215</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
@@ -103,17 +103,107 @@
                         <property name="can_focus">True</property>
                         <property name="max_length">30</property>
                         <property name="max_width_chars">30</property>
-                        <property name="shadow_type">none</property>
+                        <property name="shadow_type">out</property>
                         <property name="progress_pulse_step">0</property>
                         <property name="primary_icon_name">edit-find-symbolic</property>
-                        <property name="primary_icon_activatable">False</property>
-                        <property name="primary_icon_sensitive">False</property>
+                        <property name="primary_icon_activatable">True</property>
+                        <property name="primary_icon_sensitive">True</property>
                         <property name="placeholder_text" translatable="yes">Search by username</property>
                         <signal name="activate" handler="on_find_user_field_activate" swapped="no"/>
                       </object>
                       <packing>
                         <property name="x">13</property>
-                        <property name="y">9</property>
+                        <property name="y">8</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkStack" id="contact_search_result_stack">
+                        <property name="width_request">230</property>
+                        <property name="height_request">160</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="transition_duration">200</property>
+                        <property name="transition_type">slide-up-down</property>
+                        <child>
+                          <object class="GtkFixed" id="contact_search_result_fixed">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <child>
+                              <object class="GtkListBox" id="contact_search_result_list_box">
+                                <property name="name">search_result_list_box</property>
+                                <property name="width_request">230</property>
+                                <property name="height_request">70</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                              </object>
+                              <packing>
+                                <property name="y">30</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="contact_search_result_label">
+                                <property name="name">search_result_label</property>
+                                <property name="width_request">230</property>
+                                <property name="height_request">15</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Search result:</property>
+                                <attributes>
+                                  <attribute name="font-desc" value="Helvetica Neue 16"/>
+                                  <attribute name="foreground" value="#ffffffffffff"/>
+                                </attributes>
+                              </object>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="sorry_find_user_label">
+                                <property name="name">search_result_label</property>
+                                <property name="width_request">230</property>
+                                <property name="height_request">30</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Sorry, we couldn't find such user</property>
+                                <attributes>
+                                  <attribute name="font-desc" value="Gargi 10"/>
+                                  <attribute name="foreground" value="#ffffffffffff"/>
+                                </attributes>
+                              </object>
+                              <packing>
+                                <property name="y">50</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkButton" id="contact_search_end_button">
+                                <property name="label" translatable="yes">End search</property>
+                                <property name="width_request">100</property>
+                                <property name="height_request">40</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <signal name="clicked" handler="on_contact_search_end_button_clicked" swapped="no"/>
+                              </object>
+                              <packing>
+                                <property name="x">61</property>
+                                <property name="y">110</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="name">page0</property>
+                            <property name="title" translatable="yes">page0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkFixed" id="contact_search_result_empty_fixed">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                          </object>
+                          <packing>
+                            <property name="name">page1</property>
+                            <property name="title" translatable="yes">page1</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="y">55</property>
                       </packing>
                     </child>
                   </object>
@@ -124,68 +214,20 @@
                     <property name="height_request">505</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="shadow_type">in</property>
+                    <property name="shadow_type">none</property>
                     <child>
                       <object class="GtkViewport" id="contacts_view_port">
                         <property name="width_request">230</property>
-                        <property name="height_request">505</property>
+                        <property name="height_request">-1</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <child>
-                          <object class="GtkBox">
+                          <object class="GtkListBox" id="contact_list_box">
+                            <property name="name">contact_list_box</property>
                             <property name="width_request">-1</property>
                             <property name="height_request">-1</property>
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="orientation">vertical</property>
-                            <property name="baseline_position">bottom</property>
-                            <child>
-                              <object class="GtkLabel" id="search_result_label">
-                                <property name="name">search_result_label</property>
-                                <property name="can_focus">False</property>
-                                <property name="visible">False</property>
-                                <property name="margin_bottom">0</property>
-                                <property name="label" translatable="yes">Search result:</property>
-                                  <attributes>
-                                    <attribute name="font-desc" value="Helvetica Neue 16"/>
-                                    <attribute name="foreground" value="#ffffffffffff"/>
-                                  </attributes>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">0</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkListBox" id="search_result_list_box">
-                                <property name="name">search_result_list_box</property>
-                                <property name="width_request">-1</property>
-                                <property name="height_request">-1</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                                <property name="margin_bottom">0</property>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">True</property>
-                                <property name="position">1</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkListBox" id="contact_list_box">
-                                <property name="name">contact_list_box</property>
-                                <property name="width_request">-1</property>
-                                <property name="height_request">-1</property>
-                                <property name="visible">True</property>
-                                <property name="can_focus">False</property>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">True</property>
-                                <property name="position">2</property>
-                              </packing>
-                            </child>
                           </object>
                         </child>
                       </object>
