--- a/client/glade/ch_window.glade
+++ b/client/glade/ch_window.glade
@@ -19,6 +19,22 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
+          <object class="GtkButton" id="logout_button">
+            <property name="label" translatable="yes">Log Out</property>
+            <property name="width_request">180</property>
+            <property name="height_request">70</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <style>
+              <class name="logout_button"/>
+            </style>
+          </object>
+          <packing>
+            <property name="y">490</property>
+          </packing>
+        </child>
+        <child>
           <object class="GtkListBox" id="main_list">
             <property name="width_request">180</property>
             <property name="height_request">270</property>
@@ -106,8 +122,6 @@
                         <property name="shadow_type">out</property>
                         <property name="progress_pulse_step">0</property>
                         <property name="primary_icon_name">edit-find-symbolic</property>
-                        <property name="primary_icon_activatable">True</property>
-                        <property name="primary_icon_sensitive">True</property>
                         <property name="placeholder_text" translatable="yes">Search by username</property>
                         <signal name="activate" handler="on_find_user_field_activate" swapped="no"/>
                       </object>
@@ -122,7 +136,6 @@
                         <property name="height_request">160</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="transition_duration">200</property>
                         <property name="transition_type">slide-up-down</property>
                         <child>
                           <object class="GtkFixed" id="contact_search_result_fixed">
@@ -161,7 +174,7 @@
                                 <property name="can_focus">False</property>
                                 <property name="label" translatable="yes">Sorry, we couldn't find such user</property>
                                 <attributes>
-                                  <attribute name="font-desc" value="Gargi 10"/>
+                                  <attribute name="font-desc" value="Helvetica Neue 14"/>
                                   <attribute name="foreground" value="#ffffffffffff"/>
                                 </attributes>
                               </object>
@@ -214,7 +227,6 @@
                     <property name="height_request">505</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="shadow_type">none</property>
                     <child>
                       <object class="GtkViewport" id="contacts_view_port">
                         <property name="width_request">230</property>
@@ -662,40 +674,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkFixed">
-            <property name="width_request">110</property>
-            <property name="height_request">110</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <style>
-              <class name="big_user_avatar_fixed"/>
-            </style>
-          </object>
-          <packing>
-            <property name="x">35</property>
-            <property name="y">35</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkLabel">
-            <property name="name">main_user_initials_label</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label" translatable="yes">MD</property>
-            <property name="width_chars">3</property>
-            <property name="max_width_chars">3</property>
-            <attributes>
-              <attribute name="font-desc" value="Futura Bold 40"/>
-              <attribute name="foreground" value="#88888a8a8585"/>
-            </attributes>
-          </object>
-          <packing>
-            <property name="x">40</property>
-            <property name="y">50</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkLabel" id="main_user_name_label">
+          <object class="GtkLabel" id="main_username_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="label" translatable="yes">mdudnyk</property>
@@ -707,24 +686,45 @@
             </attributes>
           </object>
           <packing>
-            <property name="x">9</property>
-            <property name="y">174</property>
+            <property name="x">20</property>
+            <property name="y">178</property>
           </packing>
         </child>
         <child>
-          <object class="GtkButton" id="logout_button">
-            <property name="label" translatable="yes">Log Out</property>
-            <property name="width_request">180</property>
-            <property name="height_request">70</property>
+          <object class="GtkBox">
+            <property name="width_request">110</property>
+            <property name="height_request">110</property>
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
+            <property name="can_focus">False</property>
+            <property name="halign">center</property>
+            <property name="valign">center</property>
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkLabel" id="main_user_initials_label">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="valign">center</property>
+                <property name="label" translatable="yes">MD</property>
+                <property name="width_chars">3</property>
+                <property name="max_width_chars">3</property>
+                <attributes>
+                  <attribute name="font-desc" value="Helvetica Neue Bold 56"/>
+                  <attribute name="foreground" value="#88888a8a8585"/>
+                </attributes>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
             <style>
-              <class name="logout_button"/>
+              <class name="avatar_main"/>
             </style>
           </object>
           <packing>
-            <property name="y">490</property>
+            <property name="x">35</property>
+            <property name="y">35</property>
           </packing>
         </child>
       </object>
