--- a/client/glade/theme.css
+++ b/client/glade/theme.css
@@ -1,96 +1,86 @@
 window {
-    background-color: #343434;
-}
+    background-color: rgba(48, 48, 48, 1); }
 
 list {
-	color: white;
-	background-color: #343434;
-	border-color: #222222; }
-	list:backdrop {
-	  color: #d7d7d7;
-	  background-color: #373737;
-	  border-color: #282828; }
-	list row {
-	  padding: 2px; }
+	color: rgb(153, 153, 153);
+	background-color: transparent;
+	border: none; }
 
-.list_ch_cont list {
-	color: rgb(131, 128, 128);
-	background-color: #343434;
-	border-color: #222222;}
-	list:backdrop {
-	  color: #d7d7d7;
-	  background-color: #373737;
-	  border-color: #282828; }
-	list row {
-	  padding: 2px; }
-
-
-row {
-	transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
-	row:hover {
-	  transition: none; }
-	row:backdrop {
-	  transition: 100ms ease-out; }
-	row.activatable.has-open-popup, row.activatable:hover {
-	  background-color: rgba(247, 247, 247, 0.05); }
-	row.activatable:active {
-	  box-shadow: inset 0 2px 2px -2px rgba(0, 0, 0, 0.2);
-	  transition: 200ms;
-	  background-color: #202433; }
-	row.activatable:backdrop:hover {
-	  background-color: transparent; }
-	row.activatable:selected:active {
-	  box-shadow: inset 0 2px 3px -1px rgba(0, 0, 0, 0.5); }
-	row.activatable:selected.has-open-popup, row.activatable:selected:hover {
-	  background-color: #202433; }
-	row.activatable:selected:backdrop {
-	  background-color: #535150; }
-
-	row:selected {
-		background-color: #202433;
-		box-shadow: inset 0 2px 3px -1px rgba(0, 0, 0, 0.5); }
-
-.list_ch_cont  row:selected {
-		background-color: #202433;
-		box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.5); }
+.main_list {
+	box-shadow: -5px 0px 6px 0px rgba(0, 0, 0, 0.466); }
 
 entry {
-	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);;
+	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
 	font-family: "Helvetica Neue";
 	font-size: 17px;
 	color:  #d7d7d7;
 	background-color: #202433;
-	border-color: transparent; }
+	border: none; }
 
-entry:checked {
-	background-color: transparent;
-	border-color: transparent; }
+row {
+	transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+
+row:selected {
+	background-color: #202433;
+	box-shadow: inset 0 2px 3px -1px rgba(0, 0, 0, 0.5); }
+
+row:hover.contact_row {
+	color: rgb(230, 230, 230); }
+
+.chats_contacts_stack {
+	box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.26); }
 
 .initials_lab {
 	font-family: "Helvetica Neue";
 	font-size: 28px;
-	color: #535150;
-}
+	color: #535150; }
 
 .username_lab {
 	font-family: "Helvetica Neue";
-	font-size: 22px;
-}
-
-row:hover.contact_row {
-	color: rgb(199, 199, 199);
-}
+	font-size: 23px; }
 
 .avatar_box {
-	background-color:#ffffff;
-	box-shadow: inset 0px 0px 6px 1px rgba(146, 146, 146, 0.815);
-	border-radius: 25px;
-}
+	background-color:#c0c0c0;
+	box-shadow:  0px 0px 3px 2px rgba(0, 0, 0, 0.459);
+	border-radius: 25px; }
 
-viewport {
-	background-color: #535150;
-}
+.avatar_main {
+	background-color: #c0c0c0;
+	box-shadow:  0px 0px 6px 1px rgba(0, 0, 0, 0.575);
+	border-radius: 60px; }
 
-.chats_contacts_stack {
-	box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.253);
-}
+.logout_button {
+	color: rgb(228, 228, 228);
+	font-family: "Arial Rounded MT Bold";
+	font-size: 16px;
+	text-shadow: none;
+	box-shadow: none;
+	background: transparent;
+	border: none;
+	border-radius: 0; }
+
+.logout_button:hover {
+	transition: 200ms;
+	color: rgb(182, 80, 80); }
+
+.logout_button:active {
+	background:  #202433;
+	box-shadow: inset -2px 2px 2px 0px rgba(0, 0, 0, 0.281); }
+
+.contact_search_end_button {
+	color: rgb(228, 228, 228);
+	font-family: "Helvetica Neue";
+	font-size: 16px;
+	text-shadow: none;
+	box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.281);
+	background:  #4d4d4d;
+	border-radius: 4px;
+	border: none; }
+
+.contact_search_end_button:hover {
+	color: rgb(241, 241, 241);
+	background:  #5a5a5a; }
+
+.contact_search_end_button:active {
+	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
+	background:   #202433; }
