--- a/client/glade/theme.css
+++ b/client/glade/theme.css
@@ -42,12 +42,27 @@ row:hover.contact_row {
 .avatar_box {
 	background-color:#c0c0c0;
 	box-shadow:  0px 0px 3px 2px rgba(0, 0, 0, 0.459);
-	border-radius: 25px; }
+	border-radius: 25px;
+	border-color: rgb(235, 235, 235);
+	border-style: solid; 
+    border-width: 2px;  }
 
 .avatar_main {
 	background-color: #c0c0c0;
 	box-shadow:  0px 0px 6px 1px rgba(0, 0, 0, 0.575);
-	border-radius: 60px; }
+	border-radius: 60px;
+	border-color: rgb(235, 235, 235);
+	border-style: solid; 
+	border-width: 3px; }
+	
+.avatar_contact_info {
+	background-color: #c0c0c0;
+	box-shadow:  0px 0px 6px 1px rgba(0, 0, 0, 0.575);
+	border-radius: 15px;
+	border-color: rgb(235, 235, 235);
+	border-style: solid; 
+	border-width: 4px; 
+}
 
 .logout_button {
 	color: rgb(228, 228, 228);
@@ -72,7 +87,7 @@ row:hover.contact_row {
 	font-family: "Helvetica Neue";
 	font-size: 16px;
 	text-shadow: none;
-	box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.281);
+	box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.205);
 	background:  #4d4d4d;
 	border-radius: 4px;
 	border: none; }
@@ -82,5 +97,65 @@ row:hover.contact_row {
 	background:  #5a5a5a; }
 
 .contact_search_end_button:active {
+	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
+	background:   #202433; }
+
+.write_message_button {
+	color: rgb(228, 228, 228);
+	font-family: "Helvetica Neue";
+	font-size: 18px;
+	text-shadow: none;
+	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.205);
+	background:  #4d4d4d;
+	border-radius: 4px;
+	border: none; }
+
+.write_message_button:hover {
+	color: #3ea2ff;
+	background:  #5a5a5a; }
+	
+.write_message_button:active {
+	font-size: 20px;
+	color: #3ea2ff;
+	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
+	background:   #202433; }
+
+.delete_contact_button {
+	color: rgb(228, 228, 228);
+	font-family: "Helvetica Neue";
+	font-size: 18px;
+	text-shadow: none;
+	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.205);
+	background:  #4d4d4d;
+	border-radius: 4px;
+	border: none; }
+	
+.delete_contact_button:hover {
+	color: rgb(255, 122, 122);
+	background:  #5a5a5a; }
+		
+.delete_contact_button:active {
+	font-size: 20px;
+	color: rgb(255, 78, 78);
+	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
+	background:   #202433; }
+
+.add_contact_button {
+	color: rgb(228, 228, 228);
+	font-family: "Helvetica Neue";
+	font-size: 18px;
+	text-shadow: none;
+	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.281);
+	background:  #4d4d4d;
+	border-radius: 4px;
+	border: none; }
+		
+.add_contact_button:hover {
+	color: rgb(153, 255, 122); 
+	background:  #5a5a5a; }
+			
+.add_contact_button:active {
+	font-size: 20px;
+	color: rgb(108, 255, 78);
 	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
 	background:   #202433; }
