--- a/client/glade/ch_window_1.glade
+++ b/client/glade/ch_window_1.glade
@@ -19,6 +19,22 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
+          <object class="GtkButton" id="logout_button">
+            <property name="label" translatable="yes">Log Out</property>
+            <property name="width_request">180</property>
+            <property name="height_request">70</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <style>
+              <class name="logout_button"/>
+            </style>
+          </object>
+          <packing>
+            <property name="y">490</property>
+          </packing>
+        </child>
+        <child>
           <object class="GtkListBox" id="main_list">
             <property name="width_request">180</property>
             <property name="height_request">270</property>
@@ -85,79 +101,6 @@
             <property name="can_focus">False</property>
             <property name="transition_duration">80</property>
             <property name="transition_type">crossfade</property>
-            <child>
-              <object class="GtkFixed" id="chats_list">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <child>
-                  <object class="GtkSearchEntry" id="chat_search_entry">
-                    <property name="width_request">204</property>
-                    <property name="height_request">38</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="max_length">30</property>
-                    <property name="max_width_chars">30</property>
-                    <property name="shadow_type">out</property>
-                    <property name="progress_pulse_step">0</property>
-                    <property name="primary_icon_name">edit-find-symbolic</property>
-                    <property name="placeholder_text" translatable="yes">Find chat by username</property>
-                  </object>
-                  <packing>
-                    <property name="x">13</property>
-                    <property name="y">8</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkScrolledWindow" id="chats_scrolled_window">
-                    <property name="width_request">230</property>
-                    <property name="height_request">505</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">never</property>
-                    <child>
-                      <object class="GtkViewport" id="chats_view_port">
-                        <property name="width_request">230</property>
-                        <property name="height_request">-1</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <child>
-                          <object class="GtkListBox" id="chat_list_box">
-                            <property name="width_request">-1</property>
-                            <property name="height_request">-1</property>
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="y">55</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="dont_have_chats_label">
-                    <property name="width_request">-1</property>
-                    <property name="height_request">-1</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">You don't have any chats, yet</property>
-                    <attributes>
-                      <attribute name="font-desc" value="Helvetica Neue 14"/>
-                      <attribute name="foreground" value="#999999999999"/>
-                    </attributes>
-                  </object>
-                  <packing>
-                    <property name="x">30</property>
-                    <property name="y">83</property>
-                  </packing>
-                </child>
-              </object>
-              <packing>
-                <property name="name">chats_list</property>
-                <property name="title" translatable="yes">chats_list</property>
-              </packing>
-            </child>
             <child>
               <object class="GtkFixed" id="contacts_list">
                 <property name="visible">True</property>
@@ -282,7 +225,6 @@
                     <property name="height_request">505</property>
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">never</property>
                     <child>
                       <object class="GtkViewport" id="contacts_view_port">
                         <property name="width_request">230</property>
@@ -314,7 +256,7 @@
                     <property name="label" translatable="yes">Use search to add new contacts</property>
                     <attributes>
                       <attribute name="font-desc" value="Helvetica Neue 14"/>
-                      <attribute name="foreground" value="#999999999999"/>
+                      <attribute name="foreground" value="#999999"/>
                     </attributes>
                   </object>
                   <packing>
@@ -326,6 +268,58 @@
               <packing>
                 <property name="name">contacts_list</property>
                 <property name="title" translatable="yes">contacts_list</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkFixed" id="chats_list">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <child>
+                  <object class="GtkListBox">
+                    <property name="width_request">230</property>
+                    <property name="height_request">505</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <child>
+                      <object class="GtkListBoxRow">
+                        <property name="width_request">100</property>
+                        <property name="height_request">80</property>
+                        <property name="visible">True</property>
+                        <property name="sensitive">False</property>
+                        <property name="can_focus">False</property>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">You don`t have any chats yet :(</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="y">55</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkEntry">
+                    <property name="width_request">-1</property>
+                    <property name="height_request">-1</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="has_frame">False</property>
+                    <property name="width_chars">18</property>
+                    <property name="max_width_chars">18</property>
+                  </object>
+                  <packing>
+                    <property name="x">22</property>
+                    <property name="y">14</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="name">chats_list</property>
+                <property name="title" translatable="yes">chats_list</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -502,46 +496,6 @@
                 <property name="position">1</property>
               </packing>
             </child>
-            <child>
-              <object class="GtkFixed" id="chat_info_main">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <child>
-                  <object class="GtkEntry" id="msg_entry">
-                    <property name="width_request">460</property>
-                    <property name="height_request">44</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="max_length">200</property>
-                    <property name="shadow_type">none</property>
-                    <property name="caps_lock_warning">False</property>
-                  </object>
-                  <packing>
-                    <property name="x">14</property>
-                    <property name="y">507</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkButton" id="send_button">
-                    <property name="label" translatable="yes">send</property>
-                    <property name="width_request">63</property>
-                    <property name="height_request">46</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                  </object>
-                  <packing>
-                    <property name="x">481</property>
-                    <property name="y">506</property>
-                  </packing>
-                </child>
-              </object>
-              <packing>
-                <property name="name">page2</property>
-                <property name="title" translatable="yes">page2</property>
-                <property name="position">2</property>
-              </packing>
-            </child>
           </object>
           <packing>
             <property name="x">410</property>
@@ -551,19 +505,16 @@
           <object class="GtkLabel" id="main_username_label">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes"></property>
-            <property name="ellipsize">start</property>
-            <property name="width_chars">25</property>
-            <property name="single_line_mode">True</property>
-            <property name="max_width_chars">25</property>
-            <property name="track_visited_links">False</property>
+            <property name="label" translatable="yes">mdudnyk</property>
+            <property name="width_chars">20</property>
+            <property name="max_width_chars">20</property>
             <attributes>
               <attribute name="font-desc" value="Futura Bold 16"/>
               <attribute name="foreground" value="#ffffffffffff"/>
             </attributes>
           </object>
           <packing>
-            <property name="x">1</property>
+            <property name="x">20</property>
             <property name="y">178</property>
           </packing>
         </child>
@@ -581,12 +532,9 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="valign">center</property>
-                <property name="label" translatable="yes"></property>
-                <property name="ellipsize">start</property>
+                <property name="label" translatable="yes">MD</property>
                 <property name="width_chars">3</property>
-                <property name="single_line_mode">True</property>
                 <property name="max_width_chars">3</property>
-                <property name="track_visited_links">False</property>
                 <attributes>
                   <attribute name="font-desc" value="Helvetica Neue Medium 56"/>
                   <attribute name="foreground" value="#88888a8a8585"/>
@@ -605,23 +553,6 @@
           <packing>
             <property name="x">35</property>
             <property name="y">35</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkButton" id="logout_button">
-            <property name="label" translatable="yes">Log Out</property>
-            <property name="width_request">180</property>
-            <property name="height_request">70</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <signal name="released" handler="on_logout_button_released" swapped="no"/>
-            <style>
-              <class name="logout_button"/>
-            </style>
-          </object>
-          <packing>
-            <property name="y">490</property>
           </packing>
         </child>
       </object>
