--- a/client/glade/theme.css
+++ b/client/glade/theme.css
@@ -159,3 +159,43 @@ row:hover.contact_row {
 	color: rgb(108, 255, 78);
 	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
 	background:   #202433; }
+
+
+.message_row {
+	transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+	
+.message_row:selected {
+	background-color: transparent;
+	box-shadow: none; }
+	
+.message_row:hover {
+	color: rgb(230, 230, 230); }
+
+.message_avatar_box {
+	background-color:#c0c0c0;
+	box-shadow:  0px 0px 3px 2px rgba(0, 0, 0, 0.459);
+	border-radius: 25px;
+	border-color: rgb(235, 235, 235);
+	border-style: solid; 
+    border-width: 2px;
+}
+
+.message_box {
+	background-color: #202433;
+	box-shadow: inset 0 0px 3px 0px rgba(0, 0, 0, 0.4);
+	border-radius: 10px;
+	border: none; 
+}
+
+.time_label {
+	font-family: "Helvetica Neue";
+	font-size: 10px;
+}
+
+.message_label {
+	font-family: "Lucida";
+	/* letter-spacing: 1px; */
+	font-weight: 300;
+	font-size: 13px;
+	
+}
