--- a/client/glade/login_theme.css
+++ b/client/glade/login_theme.css
@@ -1,32 +1,95 @@
 window {
-	background-color: rgba(48, 48, 48, 1);
+	background-color: #282C31; 
 	color: #d7d7d7;
-	font-family: "Helvetica Neue"; }
+	font-family: "Helvetica Neue"; 
+}
 
 entry {
-	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
-	font-family: "Helvetica Neue";
-	font-size: 17px;
-	color:  #d7d7d7;
-	background-color: #202433;
-	border: none; }
-
-button {
-	color: rgb(228, 228, 228);
 	font-family: "Helvetica Neue";
 	font-size: 18px;
+	color:  #CACACA;
+	background-color: rgba(94, 94, 94, 0.2);
+	border: 1px solid rgb(117, 117, 117); 
+}
+
+button {
+	color: #CACACA;
+	font-family: "Helvetica Neue";
+	font-size: 16px;
 	text-shadow: none;
-	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.281);
+	border: 1px solid rgb(117, 117, 117); 
 	background:  #4d4d4d;
 	border-radius: 4px;
-	border: none; }
+	box-shadow: none;
+}
+
+button#reg_button {
+	color: red;
+}
 		
 button:hover {
-	color: rgb(76, 157, 250); 
-	background:  #5a5a5a; }
+	color: #c7c7c7; 
+	background:  #565f74; 
+}
 			
 button:active {
 	font-size: 20px;
 	color: rgb(108, 255, 78);
-	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
-	background:   #202433; }
+	border: 1px solid rgb(117, 117, 117); 
+	box-shadow: none;
+	background:   #202433; 
+}
+
+.reg_button {
+	font-size: 18px;
+	color: rgb(167, 159, 163);
+	/* border: 1px solid rgb(117, 117, 117); */
+	border: none;
+	box-shadow: none;
+	background-color:   transparent; 
+}
+
+.reg_button:hover {
+	font-size: 18px;
+	color: rgb(255, 255, 255);
+	/* border: 1px solid rgb(117, 117, 117); */
+	border: none;
+	box-shadow: none;
+	background-color:   transparent; 
+}
+
+.reg_button:active {
+	font-size: 18px;
+	color: rgb(60, 235, 80);
+	/* border: 1px solid rgb(117, 117, 117); */
+	border: none;
+	box-shadow: none;
+	background-color:   transparent; 
+}
+
+.back_log_in_button {
+	font-size: 18px;
+	color: rgb(167, 159, 163);
+	/* border: 1px solid rgb(117, 117, 117); */
+	border: none;
+	box-shadow: none;
+	background-color:   transparent; 
+}
+
+.back_log_in_button:hover {
+	font-size: 18px;
+	color: rgb(255, 255, 255);
+	/* border: 1px solid rgb(117, 117, 117); */
+	border: none;
+	box-shadow: none;
+	background-color:   transparent; 
+}
+
+.back_log_in_button:active {
+	font-size: 18px;
+	color: rgb(60, 235, 80);
+	/* border: 1px solid rgb(117, 117, 117); */
+	border: none;
+	box-shadow: none;
+	background-color:   transparent; 
+}
