--- a/client/glade/theme.css
+++ b/client/glade/theme.css
@@ -1,67 +1,68 @@
 window {
-    background-color: rgba(48, 48, 48, 1); }
+	background-color: #282C31; 
+}
 
 list {
 	color: rgb(153, 153, 153);
 	background-color: transparent;
 	border: none; }
 
-.main_list {
-	box-shadow: -5px 0px 6px 0px rgba(0, 0, 0, 0.466); }
-
 entry {
-	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
-	font-family: "Helvetica Neue";
-	font-size: 17px;
-	color:  #d7d7d7;
-	background-color: #202433;
-	border: none; }
+	font-family: "Arial";
+	font-size: 12px;
+	color:  #ffffff;
+	background-color: rgba(94, 94, 94, 0.2);
+	border: 1px solid rgb(117, 117, 117); 
+}
 
 row {
-	transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
+	transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); 
+}
 
 row:selected {
-	background-color: #202433;
-	box-shadow: inset 0 2px 3px -1px rgba(0, 0, 0, 0.5); }
+	/* background-color: rgba(184, 184, 184, 0.5); */
+	background: linear-gradient(96.78deg, #484849 0%, #33383d 100%);
+	border-left: 1px solid rgb(117, 117, 117); 
+}
 
 row:hover.contact_row {
 	color: rgb(230, 230, 230); }
 
 .chats_contacts_stack {
-	box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.26); }
+	/* background-color: #3b4147; */
+	border-left: 1px solid #34393f; 
+	border-right: 1px solid #34393f; 
+}
 
 .initials_lab {
 	font-family: "Helvetica Neue";
 	font-size: 28px;
-	color: #535150; }
+	color: #535150; 
+}
 
 .username_lab {
 	font-family: "Helvetica Neue";
-	font-size: 23px; }
+	font-weight: 500;
+	font-size: 16px; 
+}
 
 .avatar_box {
-	background-color:#c0c0c0;
-	box-shadow:  0px 0px 3px 2px rgba(0, 0, 0, 0.459);
+	background-color: #CACACA;
+	border: 1px solid rgb(117, 117, 117); 
 	border-radius: 25px;
-	border-color: rgb(235, 235, 235);
-	border-style: solid; 
-    border-width: 2px;  }
+}
 
 .avatar_main {
 	background-color: #c0c0c0;
-	box-shadow:  0px 0px 6px 1px rgba(0, 0, 0, 0.575);
+	border: 1px solid rgb(117, 117, 117); 
 	border-radius: 60px;
-	border-color: rgb(235, 235, 235);
-	border-style: solid; 
-	border-width: 3px; }
+}
 	
 .avatar_contact_info {
+	font-size: 12px;
 	background-color: #c0c0c0;
-	box-shadow:  0px 0px 6px 1px rgba(0, 0, 0, 0.575);
-	border-radius: 15px;
-	border-color: rgb(235, 235, 235);
-	border-style: solid; 
-	border-width: 4px; 
+	border: 1px solid rgb(117, 117, 117); 
+	border-radius: 25px;
 }
 
 .logout_button {
@@ -80,35 +81,37 @@ row:hover.contact_row {
 
 .logout_button:active {
 	background:  #202433;
-	box-shadow: inset -2px 2px 2px 0px rgba(0, 0, 0, 0.281); }
+	border: 1px solid rgb(117, 117, 117); 
+}
 
 .contact_search_end_button {
 	color: rgb(228, 228, 228);
 	font-family: "Helvetica Neue";
 	font-size: 16px;
 	text-shadow: none;
-	box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.205);
+	border: 1px solid rgb(117, 117, 117); 
 	background:  #4d4d4d;
-	border-radius: 4px;
-	border: none; }
+}
 
 .contact_search_end_button:hover {
 	color: rgb(241, 241, 241);
 	background:  #5a5a5a; }
 
 .contact_search_end_button:active {
-	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
-	background:   #202433; }
+	border: 1px solid rgb(117, 117, 117); 
+	/* box-shadow: inset 0 2px 3px 0px rgba(48, 48, 48, 0.9); */
+	background:   #332020; }
 
 .write_message_button {
 	color: rgb(228, 228, 228);
 	font-family: "Helvetica Neue";
 	font-size: 18px;
 	text-shadow: none;
-	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.205);
+	border: 1px solid rgb(117, 117, 117); 
+	box-shadow: none;
 	background:  #4d4d4d;
 	border-radius: 4px;
-	border: none; }
+}
 
 .write_message_button:hover {
 	color: #3ea2ff;
@@ -117,18 +120,21 @@ row:hover.contact_row {
 .write_message_button:active {
 	font-size: 20px;
 	color: #3ea2ff;
-	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
-	background:   #202433; }
+	box-shadow: none;
+	/* box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9); */
+	background:   #454750; }
 
 .delete_contact_button {
 	color: rgb(228, 228, 228);
 	font-family: "Helvetica Neue";
 	font-size: 18px;
 	text-shadow: none;
-	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.205);
+	box-shadow: none;
+	border: 1px solid rgb(117, 117, 117); 
+	/* box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.205); */
 	background:  #4d4d4d;
 	border-radius: 4px;
-	border: none; }
+}
 	
 .delete_contact_button:hover {
 	color: rgb(255, 122, 122);
@@ -137,18 +143,22 @@ row:hover.contact_row {
 .delete_contact_button:active {
 	font-size: 20px;
 	color: rgb(255, 78, 78);
-	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
-	background:   #202433; }
+	border: 1px solid rgb(117, 117, 117); 
+	box-shadow: none;
+	/* box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9); */
+	background:   #523232; 
+}
 
 .add_contact_button {
 	color: rgb(228, 228, 228);
 	font-family: "Helvetica Neue";
 	font-size: 18px;
 	text-shadow: none;
-	box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.281);
+	border: 1px solid rgb(117, 117, 117); 
+	box-shadow: none;
 	background:  #4d4d4d;
 	border-radius: 4px;
-	border: none; }
+}
 		
 .add_contact_button:hover {
 	color: rgb(153, 255, 122); 
@@ -157,45 +167,110 @@ row:hover.contact_row {
 .add_contact_button:active {
 	font-size: 20px;
 	color: rgb(108, 255, 78);
-	box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9);
+	border: 1px solid rgb(117, 117, 117); 
+	box-shadow: none;
 	background:   #202433; }
 
 
 .message_row {
+	/* margin: 8px 0px 5px 10px; */
 	transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
 	
+.message_row_owner:selected {
+	background: transparent;
+	box-shadow: none;
+}
+
 .message_row:selected {
-	background-color: transparent;
-	box-shadow: none; }
+	background: transparent;
+	box-shadow: none;
+	border-right: 1px solid rgb(117, 117, 117);
+	border-left: 0px ;
+}
 	
 .message_row:hover {
-	color: rgb(230, 230, 230); }
+	color: rgb(230, 230, 230); 
+	/* background: linear-gradient(96.78deg, #39393A 0%, #282C31 100%); */
+}
 
 .message_avatar_box {
 	background-color:#c0c0c0;
-	box-shadow:  0px 0px 3px 2px rgba(0, 0, 0, 0.459);
 	border-radius: 25px;
 	border-color: rgb(235, 235, 235);
 	border-style: solid; 
     border-width: 2px;
 }
 
+.message_box_owner {
+	/* background-color: rgba(94, 94, 94, 0.2); */
+	background: linear-gradient(90.54deg, #5B5B5B 0%, #4D4D4D 100%);
+	border-radius: 0px 10px 10px 10px;
+	
+	/* border: none;  */
+	color: #d7d7d7;
+}
+
 .message_box {
-	background-color: rgba(94, 94, 94, 0.5);
-	box-shadow: inset 0 0px 1px 1px rgba(0, 0, 0, 0.1);
-	border-radius: 10px;
-	border: none; 
+	/* background-color: rgba(94, 94, 94, 0.2); */
+	background: linear-gradient(90.54deg, #5B5B5B 0%, #4D4D4D 100%);
+	border-radius: 10px 0px 10px 10px;
+	/* border: none;  */
+	color: #d7d7d7;
 }
 
 .time_label {
 	font-family: "Helvetica Neue";
-	font-size: 10px;
+	color: #aabccf;
+	font-size: 12px;
 }
 
 .message_label {
-	font-family: "Lucida";
-	/* letter-spacing: 1px; */
-	font-weight: 300;
+	font-family: "Helvetica Neue";
+	/* line-height: 25em; */
+	letter-spacing: 0.08rem;
+	font-weight: 100;
 	font-size: 13px;
-	
+}
+
+.send_button {
+	color: rgb(228, 228, 228);
+	font-family: "Helvetica Neue";
+	font-size: 18px;
+	text-shadow: none;
+	border: 1px solid rgb(117, 117, 117); 
+	box-shadow: none;
+	/* box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.281); */
+	background:  #4d4d4d;
+	border-radius: 4px;
+}
+		
+.send_button:hover {
+	color: rgb(153, 255, 122); 
+	background:  #5a5a5a; }
+			
+.send_button:active {
+	font-size: 20px;
+	color: rgb(156, 156, 156);
+	border: 1px solid rgb(117, 117, 117); 
+	box-shadow: none;
+	/* box-shadow: inset 0 2px 3px 0px rgba(0, 0, 0, 0.9); */
+	background:   #202433; }
+
+.time_lab {
+	font-family: "Helvetica Neue";
+	color: #aabccf;
+	font-size: 12px;	
+}
+
+.username_chat_lab {
+	font-family: "Helvetica Neue";
+	font-size: 15px;
+	font-weight: 500;
+	color: #ffffff;
+}
+
+.chat_row {
+	font-family: "Helvetica Neue";
+	color: #a1bedd;
+	font-size: 15px;
 }
